gh-pages agregado

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "homepage":"https://elmergustavo.github.io/portafolio",
   "name": "portfolio",
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "deploy": "gh-pages -d build",
     "predeploy": "npm run build",
