--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://elmergustavo.github.io/portafolio",
+  "homepage":"https://elmergustavo.github.io/",
   "name": "portfolio",
   "version": "1.0.0",
   "private": true,
