--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Elmer Gustavo Pú || Portfolio",
-  "name": "Elmer Gustavo Pú || Portfolio",
+  "short_name": "Elmer Gustavo || Portfolio",
+  "name": "Elmer Gustavo || Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
