--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
-    "node-sass": "^4.14.1"
+    "gh-pages": "^3.1.0"
   }
 }
